# flagbase

./: .air.conf  .gitignore  README.md  SECURITY.md  bun.lockb  dependabot.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: auto-merge.yml  dependabot.yml  pull_request_template.md
.github/workflows/: ci-codeql-analysis.yml  ci-dependabot.yml  ci-flagbase-client.yml  ci-flagbase-core.yml  ci-flagbase-ui.yml  ci-flagbase-website.yml  ci-flagbase-www.yml  ci-health-codeball.yml  flagbase-core.yml  (+8 more)
app/: tailwind.config.js
cli/: README.md
client/: .editorconfig  .eslintrc.js  .firebaserc  .gitignore  README.md  firebase.json  package.json  playwright-ct.config.ts  playwright-setup.ts  playwright.config.ts  prettier.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
core/: .air.conf  .golangci.yml  Dockerfile  README.md  docker-compose.yml  embed.go  env.example  go.mod  go.sum  main.go  prometheus.yml
core_rs/: Cargo.toml  Dockerfile  docker-compose.yml
core_rs/migrations/2023-12-10-113902_create_posts/: up.sql
core_rs/src/: lib.rs  main.rs  models.rs
core_rust/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
core_rust/src/: health_check.rs  main.rs
dev/: README.md  sidebars.yaml
docs/: README.md
playwright-report/: index.html
sdk/: README.md
ui/: .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  README.md  jest.config.js  package-lock.json  package.json  playwright-ct.config.ts  playwright.config.ts  pnpm-lock.yaml  prettier.config.js  styles.tsx  tailwind.config.js  tsconfig.json  vite.config.ts
website/: .firebaserc  README.md  docusaurus.config.ts  firebase.json  package.json
www/: .firebaserc  Dockerfile  README.md  docker-compose.yml  docusaurus.config.ts  firebase.json  package.json
www_v2/: Dockerfile  README.md  docker-compose.yml
(+1086 files in other folders)
