[package]
name = "core"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
diesel = { version = "2.1.4", features = ["postgres"] }
dotenvy = "0.15.7"
serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] }


[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "diesel_postgres_pool"]